--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@
                     <i class="fas fa-map-marker-alt arrow"></i>
                 </a>
 
-                <div style="font-size: 11px; color: #aaa; text-align: center; line-height: 1.4;">
+                <div style="font-size: 11px; color: #585858; text-align: center; line-height: 1.4;">
                     <i class="fas fa-check-circle"></i> Verified Sources Only.<br>Always consult a doctor.
                 </div>
             </div>
