--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="side-panel right-panel">
-            <h3 class="panel-title">Trusted Resources</h3>
+            <h3 class="panel-title">Easy Accessables</h3>
             <div class="content-wrapper">
                 <a href="https://www.cdc.gov/antibiotic-use/index.html" target="_blank" class="resource-card">
                     <div class="icon-box" style="background: #e8f4f8; color: #3498db;"><i class="fas fa-pills"></i>
